--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -12,7 +12,7 @@ env:
 jobs:
   build:
     strategy:
-      fail-fase: false
+      fail-fast: false
       matrix:
         os: [ubuntu-latest,windows-latest,windows-2019,macos-latest]
 
