Check for previous artifacts set to continue on error

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -23,6 +23,7 @@ jobs:
       - name: Check for previous artifacts
         id: download
         uses: dawidd6/action-download-artifact@v2
+        continue-on-error: true
         with:
           github_token: ${{ github.token }}
           name: intunewin
