--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -43,6 +43,7 @@ jobs:
             echo "artifact=$ArtifactPath" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
           }
           echo $env:GITHUB_ENV
+        shell: pwsh
         env:
           setupfile: "install-sophos.cmd"
           inputfolder: "./input"
