--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest,windows-latest,windows-2019,macos-latest]
+        os: [windows-latest,windows-2019]
 
     runs-on: ${{ matrix.os }}
     steps:
@@ -35,7 +35,7 @@ jobs:
           $InputFolder="${{ env.inputfolder }}"
           $OutputFolder="${{ env.outputfolder }}"
 
-          ./IntuneWinPackage.ps1 -SetupFile $SetupFile -InputFolder $InputFolder -OutputFolder $OutputFolder
+          "$PSScriptRoot/IntuneWinPackage.ps1" -SetupFile $SetupFile -InputFolder $InputFolder -OutputFolder $OutputFolder
 
           $ArtifactPath=(Get-Item -Path "$InputFolder\*.intunewin").FullName
 
