--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -32,19 +32,17 @@ jobs:
           path: ./
           check_artifacts: true
       - name: Run Intune WinApp Utility
-        uses: Amadevus/pwsh-script@v2
         id: script
-        with:
-          script: |
-            $SetupFile="${{ env.setupfile }}"
-            $InputFolder="${{ env.inputfolder }}"
-            $OutputFolder="${{ env.outputfolder }}"
+        run: |
+          $SetupFile="${{ env.setupfile }}"
+          $InputFolder="${{ env.inputfolder }}"
+          $OutputFolder="${{ env.outputfolder }}"
 
-            "$PSScriptRoot/IntuneWinPackage.ps1" -SetupFile $SetupFile -InputFolder $InputFolder -OutputFolder $OutputFolder
+          "$PSScriptRoot/IntuneWinPackage.ps1" -SetupFile $SetupFile -InputFolder $InputFolder -OutputFolder $OutputFolder
 
-            $ArtifactPath=Test-Path -Path "$OutputFolder\*.intunewin"
+          $ArtifactPath=Test-Path -Path "$OutputFolder\*.intunewin"
 
-            If ($ArtifactPath){
-              echo "artifact=$ArtifactPath" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-            }
-            echo $env:GITHUB_ENV
+          If ($ArtifactPath){
+            echo "artifact=$ArtifactPath" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+          }
+          echo $env:GITHUB_ENV
