--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -46,3 +46,9 @@ jobs:
             echo "artifact=$ArtifactPath" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
           }
           echo $env:GITHUB_ENV
+      - name: Upload intunewin file as Artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: intunewin
+          path: ${{ env.artifact }}
+          if-no-files-found: error
