--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -45,7 +45,10 @@ jobs:
           $ArtifactPath=Test-Path -Path "$OutputFolder\*.intunewin"
 
           If ($ArtifactPath){
+            echo $ArtifactPath
             echo "artifact=$ArtifactPath" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+          } else {
+            echo "Artifact does not exist!"
           }
           echo $env:GITHUB_ENV
       - name: Upload intunewin file as Artifact
